# gobernador-ia

./: .env.example  .gitignore  ALL_TOOLS_SUMMARY.md  DATABASE_CONNECTION_GUIDE.md  DATABASE_STATUS_REPORT.md  DATABASE_VISUAL_REPORT.txt  DB_QUICK_CARD.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MCP_GUIDE.md  DEPLOYMENT_STATUS_REPORT.txt  DEPLOYMENT_SUMMARY.md  DEVELOPER_TOOLKIT.md  Dockerfile  FINAL_CHECKLIST.md  FULLSTACK_DEPLOYMENT.md  LEGAL_COMPLIANCE_GUIDE.md  LEGAL_COMPLIANCE_INTEGRATION.js  LEGAL_COMPLIANCE_SUMMARY.md  LegalComplianceDashboard.jsx  PRODUCTION_DEPLOYMENT.md  QUICKSTART.txt  QUICK_REFERENCE.md  README.md  WINDOWS_BATCH_TROUBLESHOOTING.md  WINDOWS_QUICK_START.txt  WINDOWS_START_HERE.txt  cloud-deploy.sh  cloudbuild.yaml  diagnose.bat  docker-compose listo.yml  docker-compose-mcp.yml  docker-compose.aws.yml  docker-compose.yml  gobernador-dev.js  gobernador-mcp.bat  gobernador-mcp.sh  gobernador.bat  gobernador.sh  (+8 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  railway.json
backend/migrations/: 20240101000000_create_audit_trail.sql
backend/src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  risk.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FileUpload.jsx  Header.jsx  PendingCard.jsx  ThreeBackground.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Review.jsx
mcp-server/: index.js  package.json
(+1 files in other folders)
